--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: "Class of 2025"
 owner_name: Nikhil Ekambaram
 github_username: Nikhile22427
 github_repo: "port_2025" 
-# baseurl: "/portfolio_2025"
+ baseurl: "/port_2025"
 future: true
 remote_theme: jekyll/minima
 minima:
